# pcmsolver

./: .appveyor.yml  .clang-format  .codecov.yml  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .magnum.yml  .mailmap  .pcmsolver-travis.yml  .readthedocs.yml  .travis.yml  .travis_requirements.txt  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.PCMSolver  CTestConfig.cmake  CheckPython.cmake  Config.hpp.in  Dangerfile  Doxyfile  LICENSE  PCMOperator.cpp  Pipfile  README.md  THIRD-PARTY-LICENSES  TODO  TraditionalPCMOperator.cpp  TraditionalPCMOperator.h  appveyor.yml  codecov.yml  default.nix  pcmsolver.cpp  pcmsolver.files  pcmsolver.in  pcmsolver.includes  pcmsolver.inp  (+4 more)
api/: CMakeLists.txt  PCMInput.h  PCMSolverInput.h  pcmsolver.F90  pcmsolver.f90  pcmsolver.h
include/: CMakeLists.txt  Citation.hpp  Config.hpp.in  Cxx11Workarounds.hpp  ErrorHandling.hpp  LoggerInterface.hpp  PhysicalConstants.hpp  STLUtils.hpp  TimerInterface.hpp
src/: CMakeLists.txt  debug_load.cpp  debug_wavcav.cpp  make_cmake_files.py  pcmsolver.cpp  pcmsolver.cpp.in  plot_green_spherical.cpp  test.cpp  wavcav.cpp
src/attic/: DielectricSphere.cpp  DielectricSphere.h  ForIdGreen2.hpp  MetalSphere.cpp  MetalSphere.hpp  PlanarInterface.cpp  PlanarInterface.hpp  QuasiHarmonicInterface.hpp  dalton_wem.c  diagonal.F90  diagonal_gamess.F  for_id.hpp
src/bi_operators/: BIOperatorData.hpp  BoundaryIntegralOperator.cpp  BoundaryIntegralOperator.hpp  CMakeLists.txt  Collocation.cpp  Collocation.hpp  CollocationIntegrator.cpp  CollocationIntegrator.hpp  DiagonalIntegrator.hpp  DiagonalIntegratorFactory.cpp  DiagonalIntegratorFactory.hpp  IBoundaryIntegralOperator.cpp  IBoundaryIntegralOperator.hpp  IntegratorForward.hpp  IntegratorHelperFunctions.hpp  IntegratorTypes.hpp  Numerical.cpp  Numerical.hpp  NumericalIntegrator.cpp  NumericalIntegrator.hpp  Purisima.cpp  Purisima.hpp  PurisimaIntegrator.cpp  PurisimaIntegrator.hpp
src/cavity/: Atom.cpp  Atom.h  CMakeLists.txt  Cavity.cpp  Cavity.h  Cavity.hpp  CavityData.hpp  CavityFactory.cpp  CavityFactory.h  CavityFactory.hpp  CavityOfSpheres.cpp  CavityOfSpheres.h  Constants.h  Element.cpp  Element.hpp  GePolCavity.cpp  GePolCavity.h  GePolCavity.hpp  ICavity.cpp  ICavity.hpp  RegisterCavityToFactory.hpp  RestartCavity.cpp  RestartCavity.hpp  SurfaceFunction.cpp  SurfaceFunction.h  TsLessCavity.cpp  TsLessCavity.hpp  WaveletCavity.cpp  WaveletCavity.h  WaveletCavity.hpp
src/cavitylib/: Atom.cpp  Atom.h  CMakeLists.txt  Cavity.cpp  Cavity.h  Constants.h  GePolCavity.cpp  GePolCavity.h  Sphere.cpp  Sphere.h  SurfaceFunction.cpp  SurfaceFunction.h  WaveletCavity.cpp  WaveletCavity.h
src/dielectric_profile/: AnisotropicProfile.hpp  CMakeLists.txt  TanhProfile.hpp  UniformProfile.hpp  YukawaProfile.hpp
src/green/: AlternateSphericalDiffuse.hpp  AnalyticDirectional.h  AnalyticGradient.h  AnalyticHessian.h  AnalyticalDirectional.h  AnalyticalGradient.h  AnalyticalHessian.h  AnisotropicLiquid.cpp  AnisotropicLiquid.hpp  AutomaticDirectional.h  AutomaticGradient.h  AutomaticHessian.h  CMakeLists.txt  CollocationIntegrator.hpp  DerivativeTypes.hpp  DerivativeUtils.hpp  DiagonalIntegrator.hpp  Evaluate.h  ForIdGreen.hpp  ForIdGreen3.hpp  Green.hpp  GreenData.hpp  GreenUtils.hpp  GreensFunction.cpp  GreensFunction.h  GreensFunction.hpp  GreensFunctionFactory.cpp  GreensFunctionFactory.h  GreensFunctionFactory.hpp  GreensFunctionInterface.cpp  GreensFunctionInterface.h  GreensFunctionSum.cpp  GreensFunctionSum.h  IGreensFunction.hpp  InterfacesDef.hpp  InterfacesImpl.hpp  IonicLiquid.cpp  IonicLiquid.h  IonicLiquid.hpp  MetalNP.cpp  (+25 more)
src/interface/: CMakeLists.txt  CavityFactory.cpp  CavityFactory.h  Input.cpp  Input.hpp  InputManager.hpp  Interface.cpp  Interface.h  Interface.hpp  Meddle.cpp  Meddle.hpp  PCMInput.hpp  PhysicalConstants.cpp  SolverFactory.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  LoggerImpl.hpp  LoggerInterface.hpp
src/metal/: CMakeLists.txt  gsfera.F  metal_sphere.F90  plgndr.F
src/mmfq/: CMakeLists.txt  FQOhno.cpp  FQOhno.hpp
src/newStuff/: Interpolation.cpp  Interpolation.hpp  Vector2.hpp  Vector3.hpp
src/nt_green/: GreensFunction.cpp  GreensFunctionFactory.hpp  PlanarInterface.hpp
src/operators_diagonal/: CMakeLists.txt  CollocationIntegrator.cpp  CollocationIntegrator.hpp  DiagonalIntegrator.hpp  DiagonalIntegratorFactory.cpp  DiagonalIntegratorFactory.hpp  NumericalIntegrator.cpp  NumericalIntegrator.hpp  PurisimaIntegrator.cpp  PurisimaIntegrator.hpp
src/pcmsolverlib/: CMakeLists.txt  PCMSolver.cpp  PCMSolver.h
src/pedra/: CMakeLists.txt  cavity_derivatives.F90  makecav.F  makecav.F90  pcm_alphac.h  pcm_chrnos.h  pcm_codata.h  pcm_dblas.F90  pcm_dblas1.F  pcm_dlapack.F  pcm_dlapack.F90  pcm_gnrinf.h  pcm_ibtfun.h  pcm_implicit.h  pcm_inertia.F90  pcm_infind.h  pcm_infinp.h  pcm_inforb.h  pcm_infpar.h  pcm_infpri.h  pcm_infvar.h  pcm_iratdef.h  pcm_maxash.h  pcm_maxorb.h  pcm_mxcent.h  pcm_mxcent.inc  pcm_nuclei.h  pcm_nuclei.inc  pcm_orgcom.h  pcm_pcm.h  pcm_pcm.inc  pcm_pcmdef.h  pcm_pcmdef.inc  pcm_pcmlog.h  pcm_pcmnuclei.h  pcm_pi.h  pcm_print.F  pcm_print.F90  pcm_priunit.h  pcm_symmet.h  (+20 more)
src/pedralib/: CMakeLists.txt  codata.h  gp_dblas1.F  ibtfun.h  infind.h  inforb.h  infpar.h  infpri.h  infvar.h  makecav.F  maxaqn.h  maxash.h  mxcent.h  (+40 more)
tests/: CMakeLists.txt  C_host.c  Fortran_host-modules.F90  Fortran_host.F90  TestingMolecules.hpp  catch.cpp  fortran_host.F90  make_cmake_files.py  unit_tests.cpp
tools/: CMakeLists.txt  bar_chart.txt  cloc_tools.py.in  codata.py  codata.py.in  convert_units.py  copyright_notice.txt  counter.py.in  extract_notice.py.in  get_normals.py  getkw.py  go_pcm.py  go_pcm.py.in  init.py  list_precomp.py  metadata.py  pcmdata.py  pcmparser.py  pcmsolver.in  pcmsolver.py.in  plot_cavity.py  plot_tools.py.in  py2.x-getkw.py  py3.x-getkw.py  pyparsing.py  total_bar_chart.txt  touch_cmakelists.in  txt_to_npy.py  txt_to_npz.py  update_copyright.py  update_copyright.py.in  update_gh-pages.py.in  update_gh-pages.sh.in  versioner.py  warning_disabler.py
(+1309 files in other folders)
