install(
  FILES
    ${PROJECT_SOURCE_DIR}/api/pcmsolver.h
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
  )
install(
  FILES
    ${PROJECT_SOURCE_DIR}/api/PCMInput.h
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
  )
install(
  FILES
    ${PROJECT_SOURCE_DIR}/api/pcmsolver.f90
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
  )
